# rust-bunnymark

./: .travis.yml  Cargo.toml  Makefile.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml
_static/: index.html
_static/media/: vertex.glsl
crate/: Cargo.toml
crate/src/: bunny.rs  data.rs  game_loop.rs  game_start.rs  hud.rs  init.rs  lib.rs  renderer.rs  state.rs
site/: index.html  styles.css
src/: bunny.rs  config.rs  data.rs  fps.rs  game_loop.rs  game_start.rs  hud.rs  lib.rs  renderer.rs  state.rs
wasm/rust_bunnymark/pkg/: rust_bunnymark.d.ts  rust_bunnymark.js  rust_bunnymark_bg.d.ts  rust_bunnymark_bg.wasm  rust_bunnymark_bg.wasm.d.ts
