[package]
name = "rust_bunnymark"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
nalgebra = "0.18.0"
wasm-bindgen = "0.2.48"
js-sys = "0.3.25"
wasm-bindgen-futures= { version = "0.3.25", features = ["futures_0_3"] }
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly"] }
gloo-events = { git = "https://github.com/rustwasm/gloo" }
awsm = "0.0.4" 

# logging is only enabled for debug builds
cfg-if = "0.1"
log = "0.4"
console_log = { version = "0.1", optional = true }
 
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }


[dependencies.web-sys]
version = "0.3.25"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "Node",
    "Window",
    "Location",

]


# TODO - followup here: https://github.com/wasm-tool/wasm-pack-plugin/issues/61
[features]
default = []
dev = ["console_log", "console_error_panic_hook"]
